# predx

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis.ipynb  approve_allowance.py  farmer.ipynb  farmer.py  pyproject.toml  session_analysis.ipynb
examples/: quickstart.py
predx/: __init__.py  config.py  exceptions.py
predx/analytics/: __init__.py  discovery.py  execution.py
predx/auth/: kalshi.py  polymarket.py
predx/clients/: base.py  delphi.py  kalshi.py  polymarket.py
predx/models/: common.py  kalshi.py  polymarket.py
predx/tools/: __main__.py  fair_value.py  live_dash.py  reward_farmer.py
predx/utils/: pagination.py
predx/ws/: kalshi.py  polymarket.py
tests/: test_discovery.py  test_execution.py  test_history_access.py  test_polymarket_smoke.py
